--- a/Carpeta/Planes.css
+++ b/Carpeta/Planes.css
@@ -1,5 +1,34 @@
  .u-section-1 {
   background-image: none;
+  min-height: 3457px;
+}
+
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  letter-spacing: normal;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  letter-spacing: normal;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  letter-spacing: normal;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  letter-spacing: normal;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .u-section-1 .u-image-1 {
@@ -205,7 +234,7 @@
   margin: 0 1px;
 }
 
-.u-section-1 .u-btn-1 {
+.u-section-1 .u-btn-5 {
   letter-spacing: 1px;
   background-image: none;
   font-weight: 600;
@@ -393,7 +422,7 @@
   --radius: 25px;
   height: auto;
   min-height: 300px;
-  margin: 27px auto 0 calc(((100% - 1140px) / 2)  + 29px);
+  margin: 26px auto 0 calc(((100% - 1140px) / 2)  + 29px);
 }
 
 .u-section-1 .u-container-layout-6 {
@@ -406,20 +435,20 @@
   margin: 0 2px;
 }
 
-.u-section-1 .u-btn-2 {
+.u-section-1 .u-btn-6 {
   letter-spacing: 1px;
   background-image: none;
   font-weight: 600;
   font-size: 1.25rem;
   --radius: 10px;
-  margin: 20px auto 0;
+  margin: 18px auto 0;
   padding: 22px 164px 23px 162px;
 }
 
 .u-section-1 .u-text-25 {
   font-size: 3.75rem;
   font-weight: 700;
-  margin: 153px auto 0 calc(((100% - 1140px) / 2));
+  margin: 154px auto 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-1 .u-group-7 {
@@ -599,7 +628,7 @@
 }
 
 .u-section-1 .u-container-layout-9 {
-  padding: 18px 28px;
+  padding: 20px 28px 18px;
 }
 
 .u-section-1 .u-text-36 {
@@ -608,7 +637,7 @@
   margin: 0 1px;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-7 {
   letter-spacing: 1px;
   background-image: none;
   font-weight: 600;
@@ -810,7 +839,7 @@
   margin: 0 1px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-8 {
   letter-spacing: 1px;
   background-image: none;
   font-weight: 600;
@@ -898,35 +927,11 @@
   margin: -24px 535px 0 35px;
 }
 
-.u-section-1 .u-btn-5 {
-  background-image: none;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
-.u-section-1 .u-btn-6 {
-  background-image: none;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
-.u-section-1 .u-btn-7 {
-  background-image: none;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
-.u-section-1 .u-btn-8 {
-  background-image: none;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
 @media (max-width: 1199px) {
+   .u-section-1 {
+    min-height: 3014px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 940px;
     height: 851px;
@@ -1087,6 +1092,42 @@
     min-height: 3756px;
   }
 
+  .u-section-1 .u-btn-1 {
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    --radius: 10px;
+    margin: -2920px auto 0;
+    padding: 22px 192px 23px 190px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    --radius: 10px;
+    margin: 701px auto 0;
+    padding: 22px 192px 23px 190px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    --radius: 10px;
+    margin: 707px auto 0;
+    padding: 22px 192px 23px 190px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    --radius: 10px;
+    margin: 660px auto 60px;
+    padding: 22px 192px 23px 190px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 652px;
@@ -1125,7 +1166,7 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-5 {
     margin-top: 18px;
   }
 
@@ -1202,7 +1243,6 @@
     width: 720px;
     margin-top: -454px;
     margin-left: auto;
-    margin-bottom: 0;
   }
 
   .u-section-1 .u-image-4 {
@@ -1254,47 +1294,27 @@
     margin-left: auto;
     margin-right: auto;
   }
-
-  .u-section-1 .u-btn-5 {
-    letter-spacing: 1px;
-    font-weight: 600;
-    font-size: 1.25rem;
-    --radius: 10px;
-    margin: -2920px auto 0;
-    padding: 22px 192px 23px 190px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    letter-spacing: 1px;
-    font-weight: 600;
-    font-size: 1.25rem;
-    --radius: 10px;
-    margin: 701px auto 0;
-    padding: 22px 192px 23px 190px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    letter-spacing: 1px;
-    font-weight: 600;
-    font-size: 1.25rem;
-    --radius: 10px;
-    margin: 707px auto 0;
-    padding: 22px 192px 23px 190px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    letter-spacing: 1px;
-    font-weight: 600;
-    font-size: 1.25rem;
-    --radius: 10px;
-    margin: 660px auto 60px;
-    padding: 22px 192px 23px 190px;
-  }
 }
 
 @media (max-width: 767px) {
    .u-section-1 {
     min-height: 3701px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -521px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -2407px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 713px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 714px;
   }
 
   .u-section-1 .u-image-1 {
@@ -1615,6 +1635,7 @@
     width: 540px;
     margin-top: -418px;
     margin-right: calc(((100% - 540px) / 2)  + -15px);
+    margin-bottom: 29px;
   }
 
   .u-section-1 .u-container-layout-13 {
@@ -1660,27 +1681,35 @@
     margin-left: 51px;
     margin-right: 51px;
   }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: -521px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -2407px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-top: 713px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-top: 714px;
-  }
 }
 
 @media (max-width: 575px) {
    .u-section-1 {
     min-height: 4713px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -668px;
+    padding-right: 120px;
+    padding-left: 118px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -3101px;
+    padding-right: 119px;
+    padding-left: 118px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 900px;
+    padding-right: 120px;
+    padding-left: 118px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 942px;
+    padding-right: 119px;
+    padding-left: 118px;
   }
 
   .u-section-1 .u-image-1 {
@@ -2228,6 +2257,7 @@
     min-height: 460px;
     margin-top: -518px;
     margin-right: auto;
+    margin-bottom: 9px;
   }
 
   .u-section-1 .u-container-layout-13 {
@@ -2267,29 +2297,5 @@
   .u-section-1 .u-text-55 {
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: -668px;
-    padding-right: 120px;
-    padding-left: 118px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -3101px;
-    padding-right: 119px;
-    padding-left: 118px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-top: 900px;
-    padding-right: 120px;
-    padding-left: 118px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-top: 942px;
-    padding-right: 119px;
-    padding-left: 118px;
   }
 }
