--- a/nicepage.css
+++ b/nicepage.css
@@ -47602,13 +47602,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 116px;
+  min-height: 230px;
 }
 
 .u-header .u-image-1 {
   width: 71px;
   height: 71px;
-  margin: 35px auto 0 0;
+  margin: 31px auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -47621,7 +47621,7 @@ a.u-link.u-text-hover-grey-90:hover {
   height: auto;
   min-height: 63px;
   --radius: 20px;
-  margin: -71px auto 18px;
+  margin: -66px auto 0;
 }
 
 .u-header .u-container-layout-1 {
@@ -47643,14 +47643,31 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1rem;
   letter-spacing: 0px;
 }
+
+.u-header .u-btn-1 {
+  --radius: 50px;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  background-image: none;
+  font-weight: 400;
+  margin: -63px 0 60px auto;
+  padding: 17px 53px 19px 52px;
+}
 @media (max-width: 1199px) {
   .u-header .u-group-1 {
+    width: 537px;
+    margin-top: -66px;
     height: auto;
   }
 
   .u-header .u-container-layout-1 {
     padding-top: 0;
     padding-bottom: 0;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: -63px;
+    margin-right: 0;
   }
 }
 @media (max-width: 991px) {
